# job_bot

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  tree.py
alembic/: env.py
app/: config.py  logger.py  main.py  test_db.py
app/database/: __init__.py  db.py  models.py
app/fsm/: states.py
app/handlers/: __init__.py  account.py  account_settings.py  admin.py  admin_panel.py  channels.py  common.py  common_edit.py  data.py  stats.py  test_mode.py  vacancy.py
app/handlers/admin/: __init__.py  accounts.py  add_account.py  channels.py  common.py  cookies.py  edit_account.py  main.py  prompt.py  stats.py  test_mode.py  vacancies.py
app/handlers/user/: __init__.py  data.py  settings.py  stats.py  test_mode.py  vacancy.py
app/keyboards/: inline.py  reply.py
app/middlewares/: access_check.py
app/services/: account.py  account_crud.py  account_data.py  base.py  exceptions.py  hh_api.py  hh_parser.py  letter_generator.py  login.py  response.py  response_sender.py  vacancy.py  vacancy_filter.py  vacancy_parser.py
app/utils/: db.py  encryption.py  proxy_rotator.py
app/worker/: celery_app.py  tasks.py
hh_client/: __init__.py  client.py  exceptions.py  models.py  utils.py
logs/: requirements.txt
scripts/: debug_page_0.html  debug_parsing.py
tests/: conftest.py  test_hh_client.py  test_letter_generator.py  test_response.py  test_vacancy.py  test_vacancy_filter.py
